k8s/ingresses/ingress-orders.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-ingress
spec:
  tls:
  - hosts:
    - orders.proyectodevops.local
    secretName: default-server-secret
  rules:
  - host: orders.proyectodevops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 80
