k8s/ingresses/ingress-payments.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ingress
spec:
  rules:
  - host: payments.proyectodevops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payments-service
            port:
              number: 80
