k8s/ingresses/ingress-products.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
spec:
  rules:
  - host: products.proyectodevops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 80
