k8s/ingresses/ingress-shipping.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipping-ingress
spec:
  rules:
  - host: shipping.proyectodevops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shipping-service
            port:
              number: 80
