k8s/ingresses/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  
  tls:
  - hosts:
    - proyectodevops.local
    secretName: default-server-secret
  
  rules:
  - host: proyectodevops.local
    http:
      paths:
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 30001
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payments-service
            port:
              number: 30002
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 30003
      - path: /shipping
        pathType: Prefix
        backend:
          service:
            name: shipping-service
            port:
              number: 30004
